--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -30,10 +30,10 @@ h1 {
   font-weight: 400;
   line-height: $line-height-h1;
   margin: $margin-top-h1 0 $margin;
+}
 
-  a {
-    text-decoration: none;
-  }
+h1 a {
+  text-decoration: none;
 }
 
 // Grouping Content
@@ -55,10 +55,10 @@ hr {
   line-height: 1;
   margin: $margin-large 0;
   text-align: center;
+}
 
-  &::before {
-    content: "✖ ✖ ✖";
-  }
+hr::before {
+  content: "✖ ✖ ✖";
 }
 
 pre {
@@ -85,14 +85,14 @@ blockquote {
   margin: 0 0 $margin;
   padding-left: $padding-left-blockquote;
 
-  figure > &,
-  > :last-child {
-    margin-bottom: 0;
-  }
-
   @media (min-width: $breakpoint-content) {
     margin-left: $margin-left-blockquote-content;
   }
+}
+
+figure > blockquote,
+blockquote > :last-child {
+  margin-bottom: 0;
 }
 
 ul,
@@ -100,27 +100,28 @@ ol {
   margin: 0 0 $margin;
   padding-left: $padding-left-list;
 
-  ul,
-  ol {
-    margin-bottom: 0;
-  }
-
   @media (min-width: $breakpoint-content) {
     padding-left: 0;
+  }
+}
 
-    ul,
-    ol {
-      padding-left: $padding-left-list;
-    }
+ul ul,
+ul ol,
+ol ul,
+ol ol {
+  margin-bottom: 0;
+
+  @media (min-width: $breakpoint-content) {
+    padding-left: $padding-left-list;
   }
 }
 
 dl {
   margin: 0 0 $margin;
+}
 
-  dl {
-    margin-bottom: 0;
-  }
+dl dl {
+  margin-bottom: 0;
 }
 
 dt {
@@ -143,20 +144,6 @@ figcaption {
   font-size: ($ratio-text-small * 1rem);
   margin-top: $margin-tiny;
 
-  blockquote + & {
-    border-left: $width-border-blockquote solid $color-border-blockquote;
-    font-size: inherit;
-    margin-top: 0;
-    padding-left: $padding-left-blockquote;
-    padding-top: $margin;
-  }
-
-  @media (min-width: $breakpoint-content) {
-    blockquote + & {
-      margin-left: $margin-left-blockquote-content;
-    }
-  }
-
   @media (min-width: $breakpoint-full) {
     bottom: 0;
     margin-right: $width-gap;
@@ -164,11 +151,23 @@ figcaption {
     right: 100%;
     width: $width-supplement;
     z-index: 1;
+  }
+}
 
-    blockquote + & {
-      position: static;
-      width: auto;
-    }
+blockquote + figcaption {
+  border-left: $width-border-blockquote solid $color-border-blockquote;
+  font-size: inherit;
+  margin-top: 0;
+  padding-left: $padding-left-blockquote;
+  padding-top: $margin;
+
+  @media (min-width: $breakpoint-content) {
+    margin-left: $margin-left-blockquote-content;
+  }
+
+  @media (min-width: $breakpoint-full) {
+    position: static;
+    width: auto;
   }
 }
 
@@ -181,10 +180,10 @@ a {
   color: $color-accent;
   -webkit-text-decoration-skip: ink;
   text-decoration-skip: ink;
+}
 
-  &:visited {
-    color: $color-accent-dark;
-  }
+a:visited {
+  color: $color-accent-dark;
 }
 
 em {
@@ -243,11 +242,12 @@ video {
   height: auto;
   max-height: 100%;
   max-width: 100%;
+}
 
-  figure & {
-    background-color: $color-bg-light;
-    vertical-align: bottom;
-  }
+figure img,
+figure video {
+  background-color: $color-bg-light;
+  vertical-align: bottom;
 }
 
 // Tabular Data
@@ -263,13 +263,13 @@ table {
   overflow-x: auto;
   table-layout: fixed;
 
-  figure > & {
-    margin-bottom: 0;
-  }
-
   @media not screen {
     display: table;
   }
+}
+
+figure > table {
+  margin-bottom: 0;
 }
 
 %table-cell,
@@ -284,10 +284,10 @@ th {
   @extend %table-cell;
 
   text-align: inherit;
+}
 
-  thead & {
-    border-bottom: $width-border solid $color-border-table;
-  }
+thead th {
+  border-bottom: $width-border solid $color-border-table;
 }
 
 // Forms
