--- a/src/css/_global-footer.scss
+++ b/src/css/_global-footer.scss
@@ -8,10 +8,6 @@
   padding-right: $width-gap-small;
   position: relative;
 
-  a {
-    text-decoration: none;
-  }
-
   @media (min-width: $breakpoint-content) {
     display: flex;
   }
@@ -19,4 +15,8 @@
   @media (min-width: $breakpoint-full) {
     padding-left: ($width-gap-small + $width-supplement + $width-gap);
   }
+}
+
+.global-footer a {
+  text-decoration: none;
 }
