--- a/src/css/content/_section-footer.scss
+++ b/src/css/content/_section-footer.scss
@@ -5,15 +5,6 @@
   font-size: ($ratio-text-section-footer * 1rem);
   width: 100%;
 
-  p {
-    margin-bottom: 0;
-    text-align: inherit;
-  }
-
-  a {
-    text-decoration: none;
-  }
-
   @media (min-width: $breakpoint-full) {
     line-height: ($line-height-h1 * $ratio-text-h1 / $ratio-text-section-footer);
     margin-right: $width-gap;
@@ -22,4 +13,13 @@
     width: $width-supplement;
     z-index: 1;
   }
+}
+
+.section-footer p {
+  margin-bottom: 0;
+  text-align: inherit;
+}
+
+.section-footer a {
+  text-decoration: none;
 }
