--- a/src/css/global-footer/_byline.scss
+++ b/src/css/global-footer/_byline.scss
@@ -2,10 +2,6 @@
 .byline {
   position: relative;
 
-  a {
-    font-weight: 700;
-  }
-
   @media (min-width: $breakpoint-content) {
     flex-grow: 1;
     order: -1;
@@ -17,4 +13,8 @@
     margin-right: $width-gap;
     width: $width-supplement;
   }
+}
+
+.byline a {
+  font-weight: 700;
 }
