--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -1,39 +1,35 @@
 // Site Navigation
-.site-navigation {
-  ul {
-    display: flex;
-    margin-bottom: 0;
-    padding-left: 0;
-  }
+.site-navigation ul {
+  display: flex;
+  margin-bottom: 0;
+  padding-left: 0;
+}
 
-  li {
-    display: block;
-    font-size: ($ratio-text-logo * 1rem);
-    margin-left: $width-gap-small;
-  }
-
-  a {
-    color: inherit;
-  }
-
-  mark {
-    background-color: transparent;
-    display: block;
-    position: relative;
-
-    &::after {
-      border: $width-border-small solid $color-accent-light;
-      content: "";
-      display: block;
-      position: absolute;
-      width: 100%;
-    }
-  }
+.site-navigation li {
+  display: block;
+  font-size: ($ratio-text-logo * 1rem);
+  margin-left: $width-gap-small;
 
   @media (min-width: $breakpoint-content) {
-    li {
-      font-size: ($ratio-text-logo-content * 1rem);
-      margin-left: $width-gap;
-    }
+    font-size: ($ratio-text-logo-content * 1rem);
+    margin-left: $width-gap;
   }
+}
+
+.site-navigation a {
+  color: inherit;
+}
+
+.site-navigation mark {
+  background-color: transparent;
+  display: block;
+  position: relative;
+}
+
+.site-navigation mark::after {
+  border: $width-border-small solid $color-accent-light;
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
 }
