--- a/src/css/var/_color.scss
+++ b/src/css/var/_color.scss
@@ -1,3 +1,18 @@
+// Function: encode-color()
+@function encode-color($c) {
+  $r: "" + $c;
+
+  @if (str-index($r, "#") == 1) {
+    $r: "%23" + str-slice($r, 2);
+  }
+
+  @if (str-index($r, "rgba") == 1) {
+    $r: "rgba(" + red($c) + "%2C" + green($c) + "%2C" + blue($c) + "%2C" + alpha($c) + ")";
+  }
+
+  @return $r;
+}
+
 // Foreground
 $color-fg: hsl(36, 3%, 24%);
 
@@ -19,3 +34,6 @@ $color-accent-light: hsl(198, 69%, 62%);
 $color-border-blockquote: $color-bg-dark;
 
 $color-border-table: $color-bg-dark;
+
+// Widget
+$color-fg-share-button: $color-fg;
