--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -37,3 +37,10 @@ $ratio-text-section-footer: $ratio-text;
 
 // Global Footer
 $ratio-text-global-footer: $ratio-text-small;
+
+// Widget
+$ratio-text-pick: $ratio-text-enormous;
+
+$line-height-posts: $line-height-tiny;
+$ratio-text-posts: $ratio-text-large;
+$ratio-text-posts-info: $ratio-text-small;
