--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -62,3 +62,11 @@ $margin-top-global-header-full: $margin-huge;
 $width-border-site-search-query: $width-border-small;
 $height-site-search-query: (1rem + ($width-border-site-search-query + $padding-large) * 2);
 $width-site-search-query-content: ($width-content / $ratio / $ratio);
+
+// Widget
+$margin-top-move: (($line-height-root - 1) / 2);
+$margin-horizontal-move: $width-gap-small;
+
+$height-pick: ($line-height-h1 * $ratio-text-pick / $ratio-text-h1 * 1rem);
+$margin-vertical-pick: ($height-pick * 2);
+$margin-vertical-pick-full: ($height-pick * 3);
