--- a/src/css/widget/_fill.scss
+++ b/src/css/widget/_fill.scss
@@ -1,18 +1,20 @@
 // Fill
 .fill {
-  img,
-  video,
-  canvas {
-    width: 100%;
-  }
-
   @media (min-width: $breakpoint-full) {
     margin-left: (- ($width-supplement + $width-gap));
-
-    figcaption {
-      bottom: auto;
-      left: 0;
-      margin-top: $margin;
-    }
   }
+}
+
+.fill figcaption {
+  @media (min-width: $breakpoint-full) {
+    bottom: auto;
+    left: 0;
+    margin-top: $margin;
+  }
+}
+
+.fill img,
+.fill video,
+.fill canvas {
+  width: 100%;
 }
