--- a/src/css/widget/_flat.scss
+++ b/src/css/widget/_flat.scss
@@ -4,14 +4,18 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+  }
+}
 
-    li {
-      display: block;
-      width: calc((100% - #{$width-gap} * 2) / 3);
+.flat li {
+  @media (min-width: $breakpoint-content) {
+    display: block;
+    width: calc((100% - #{$width-gap} * 2) / 3);
+  }
+}
 
-      &:nth-child(3n+2):last-child {
-        width: calc((100% - #{$width-gap} * 2) / 3 * 2 + #{$width-gap});
-      }
-    }
+.flat li:nth-child(3n+2):last-child {
+  @media (min-width: $breakpoint-content) {
+    width: calc((100% - #{$width-gap} * 2) / 3 * 2 + #{$width-gap});
   }
 }
