--- a/src/css/widget/_hang.scss
+++ b/src/css/widget/_hang.scss
@@ -6,9 +6,11 @@
     right: 100%;
     width: $width-supplement;
     z-index: 1;
+  }
+}
 
-    img {
-      width: 100%;
-    }
+.hang img {
+  @media (min-width: $breakpoint-full) {
+    width: 100%;
   }
 }
