--- a/src/css/widget/_move.scss
+++ b/src/css/widget/_move.scss
@@ -1,26 +1,23 @@
 // Move
 .move {
-  $m: $width-gap-small;
-  $g: (($line-height-root - 1) / 2);
-
   margin-bottom: 0;
-  margin-top: ($g * 1rem);
+  margin-top: ($margin-top-move * 1rem);
+}
 
-  img {
-    display: block;
-    height: auto;
-    max-height: (($line-height-root * 8 - $g * 2) * 1rem);
-    max-width: ($width-content / 3);
-    width: auto;
-  }
+.move.left {
+  float: left;
+  margin-right: $margin-horizontal-move;
+}
 
-  &.left {
-    float: left;
-    margin-right: $m;
-  }
+.move.right {
+  float: right;
+  margin-left: $margin-horizontal-move;
+}
 
-  &.right {
-    float: right;
-    margin-left: $m;
-  }
+.move img {
+  display: block;
+  height: auto;
+  max-height: (($line-height-root * 8 - $margin-top-move * 2) * 1rem);
+  max-width: ($width-content / 3);
+  width: auto;
 }
