--- a/src/css/widget/_pick.scss
+++ b/src/css/widget/_pick.scss
@@ -1,49 +1,41 @@
 // Pick
 .pick {
-  $r: $ratio-text-enormous;
-  $h: ($line-height-h1 * $r / $ratio-text-h1 * 1rem);
-  $m: ($h * 2);
-
   background-color: $color-accent-light;
   margin-bottom: $margin;
   margin-top: $margin-top-h1;
   padding: $padding-small;
   position: relative;
   text-align: center;
+}
 
-  a {
-    border: $width-border-small solid;
-    color: $color-bg;
-    display: block;
-    text-decoration: none;
-  }
+.pick a {
+  border: $width-border-small solid;
+  color: $color-bg;
+  display: block;
+  text-decoration: none;
+}
 
-  h1 {
-    color: inherit;
-    font-size: ($r * 1rem);
-    margin: $m 10%;
-  }
-
-  p {
-    text-align: inherit;
-  }
-
-  footer {
-    position: absolute;
-    top: ($m - ($line-height-root * 1rem));
-    width: 100%;
-  }
+.pick h1 {
+  color: inherit;
+  font-size: ($ratio-text-pick * 1rem);
+  margin: $margin-vertical-pick 10%;
 
   @media (min-width: $breakpoint-full) {
-    $m: ($h * 3);
+    margin-bottom: $margin-vertical-pick-full;
+    margin-top: $margin-vertical-pick-full;
+  }
+}
 
-    h1 {
-      margin-bottom: $m;
-      margin-top: $m;
-    }
+.pick p {
+  text-align: inherit;
+}
 
-    footer {
-      top: ($m - ($line-height-root * 1rem));
-    }
+.pick footer {
+  position: absolute;
+  top: ($margin-vertical-pick - ($line-height-root * 1rem));
+  width: 100%;
+
+  @media (min-width: $breakpoint-full) {
+    top: ($margin-vertical-pick-full - ($line-height-root * 1rem));
   }
 }
