--- a/src/css/widget/_posts.scss
+++ b/src/css/widget/_posts.scss
@@ -1,46 +1,42 @@
 // Posts
 .posts {
-  $lh: $line-height-tiny;
-  $r: $ratio-text-large;
-  $r-info: $ratio-text-small;
-
   padding-left: 0;
+}
 
-  li {
-    font-size: ($r * 1rem);
-    line-height: $lh;
-    list-style-type: none;
-    margin-bottom: $margin;
-  }
-
-  a {
-    text-decoration: none;
-  }
-
-  .info {
-    color: $color-fg-light;
-    font-size: ($r-info * 1rem);
-  }
+.posts li {
+  font-size: ($ratio-text-posts * 1rem);
+  line-height: $line-height-posts;
+  list-style-type: none;
+  margin-bottom: $margin;
 
   @media (min-width: $breakpoint-content) {
-    li {
-      display: flex;
-      margin-bottom: $margin-small;
-      white-space: nowrap;
-    }
+    display: flex;
+    margin-bottom: $margin-small;
+    white-space: nowrap;
+  }
+}
 
-    .title {
-      display: block;
-      flex-basis: 0;
-      flex-grow: 1;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
+.posts a {
+  text-decoration: none;
+}
 
-    .info {
-      line-height: ($lh * $r / $r-info);
-      margin-left: $width-gap-small;
-      order: 1;
-    }
+.posts .title {
+  @media (min-width: $breakpoint-content) {
+    display: block;
+    flex-basis: 0;
+    flex-grow: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
+
+.posts .info {
+  color: $color-fg-light;
+  font-size: ($ratio-text-posts-info * 1rem);
+
+  @media (min-width: $breakpoint-content) {
+    line-height: ($line-height-posts * $ratio-text-posts / $ratio-text-posts-info);
+    margin-left: $width-gap-small;
+    order: 1;
   }
 }
