--- a/src/css/_global-header.scss
+++ b/src/css/_global-header.scss
@@ -9,10 +9,6 @@
   padding-left: $width-gap-small;
   padding-right: $width-gap-small;
 
-  a {
-    text-decoration: none;
-  }
-
   @media (min-width: $breakpoint-content) {
     margin-top: $margin-top-global-header-content;
   }
@@ -21,4 +17,8 @@
     margin-top: $margin-top-global-header-full;
     padding-left: ($width-gap-small + $width-supplement + $width-gap);
   }
+}
+
+.global-header a {
+  text-decoration: none;
 }
