--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -8,10 +8,6 @@
   margin-top: 0;
   text-transform: uppercase;
 
-  a {
-    color: inherit;
-  }
-
   @media (min-width: $breakpoint-content) {
     font-size: ($ratio-text-logo-content * 1rem);
   }
@@ -21,4 +17,8 @@
     margin-left: (- ($width-supplement + $width-gap));
     width: $width-supplement;
   }
+}
+
+.logo a {
+  color: inherit;
 }
