Align Move right only

--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -64,8 +64,8 @@ $height-site-search-query: (1rem + ($width-border-site-search-query + $padding-l
 $width-site-search-query-content: ($width-content / $ratio / $ratio);
 
 // Widget
-$margin-top-move: (($line-height-root - 1) / 2);
-$margin-horizontal-move: $width-gap-small;
+$margin-top-move: (($line-height-root - 1) / 2 * 1rem);
+$margin-left-move: $width-gap-small;
 
 $height-pick: ($line-height-h1 * $ratio-text-pick / $ratio-text-h1 * 1rem);
 $margin-vertical-pick: ($height-pick * 2);
