--- a/src/css/widget/_move.scss
+++ b/src/css/widget/_move.scss
@@ -1,23 +1,15 @@
 // Move
 .move {
-  margin-bottom: 0;
-  margin-top: ($margin-top-move * 1rem);
-}
-
-.move.left {
-  float: left;
-  margin-right: $margin-horizontal-move;
-}
-
-.move.right {
   float: right;
-  margin-left: $margin-horizontal-move;
+  margin-bottom: 0;
+  margin-left: $margin-left-move;
+  margin-top: $margin-top-move;
 }
 
 .move img {
   display: block;
   height: auto;
-  max-height: (($line-height-root * 8 - $margin-top-move * 2) * 1rem);
+  max-height: (($line-height-root * 8 - $margin-top-move / 1rem * 2) * 1rem);
   max-width: ($width-content / 3);
   width: auto;
 }
