Fill Pick always on large screen

--- a/src/css/widget/_pick.scss
+++ b/src/css/widget/_pick.scss
@@ -6,6 +6,10 @@
   padding: $padding-small;
   position: relative;
   text-align: center;
+
+  @media (min-width: $breakpoint-full) {
+    margin-left: (- ($width-supplement + $width-gap));
+  }
 }
 
 .pick a {
