--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -19,7 +19,7 @@
         </ol>
       </section>
 
-      <section class="section pick fill">
+      <section class="section pick">
         {{#features}}
           {{#isLatest}}
             <a href="{{link}}">
