Clear before/after for safety

--- a/src/css/widget/_fill.scss
+++ b/src/css/widget/_fill.scss
@@ -1,5 +1,7 @@
 // Fill
 .fill {
+  clear: both;
+
   @media (min-width: $breakpoint-full) {
     margin-left: (- ($width-supplement + $width-gap));
   }
