--- a/src/css/widget/_note.scss
+++ b/src/css/widget/_note.scss
@@ -1,5 +1,6 @@
 // Note
 .note {
+  clear: both;
   color: $color-fg-light;
   font-size: ($ratio-text-small * 1rem);
   line-height: $line-height-small;
