--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -26,6 +26,7 @@ body {
 }
 
 h1 {
+  clear: both;
   font-size: ($ratio-text-h1 * 1rem);
   font-weight: 400;
   line-height: $line-height-h1;
@@ -82,6 +83,7 @@ pre {
 
 blockquote {
   border-left: $width-border-blockquote solid $color-border-blockquote;
+  clear: both;
   margin: 0 0 $margin;
   padding-left: $padding-left-blockquote;
 
@@ -292,6 +294,7 @@ thead th {
 
 // Forms
 form {
+  clear: both;
   margin: 0 0 $margin;
 }
 
