Add Displace widget
This widget displaces `figure` element out of content area and moves
`figcaption` to right on large screen.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -35,6 +35,7 @@
 @import "global-footer/byline";
 
 // Widget
+@import "widget/displace";
 @import "widget/fill";
 @import "widget/flat";
 @import "widget/hang";
