Use low-risk properties also

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -2,7 +2,9 @@
 :root {
   font-family: $font-stack-system-ui;
   font-feature-settings: "kern" 1, "lnum" 1, "pnum" 1;
+  font-kerning: normal;
   font-size: percentage($ratio-text-root);
+  font-variant-numeric: lining-nums proportional-nums;
   line-height: $line-height-root;
 
   @media (min-width: $breakpoint-content) {
@@ -69,6 +71,7 @@ pre {
   font-family: $font-stack-monospace;
   font-feature-settings: "zero" 1;
   font-size: ($r * 1rem);
+  font-variant-numeric: lining-nums proportional-nums slashed-zero;
   line-height: ($line-height-root * 2 / 3 / $r);
   margin: 0 0 $margin;
   overflow: auto;
@@ -213,6 +216,7 @@ kbd {
   font-family: $font-stack-monospace;
   font-feature-settings: "zero" 1;
   font-size: 1em;
+  font-variant-numeric: lining-nums proportional-nums slashed-zero;
 }
 
 var {
@@ -256,6 +260,7 @@ table {
   clear: both;
   display: inline-block;
   font-feature-settings: "tnum" 1;
+  font-variant-numeric: lining-nums tabular-nums slashed-zero;
   margin: 0 0 $margin;
   max-width: 100%;
   overflow-x: auto;
