Clear before/after blockquote

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -85,6 +85,7 @@ pre {
 
 blockquote {
   border-left: $width-border-blockquote solid $color-border-blockquote;
+  clear: both;
   margin: 0 0 $margin;
   padding-left: $padding-left-blockquote;
 
