Add abbr dotted underline like Firefox 40+

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -206,6 +206,8 @@ cite {
 abbr {
   cursor: help;
   letter-spacing: $width-border-small;
+  text-decoration: none;
+  text-decoration: underline dotted;
 }
 
 code,
