--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -101,61 +101,61 @@ body::after {
   justify-content: space-between;
   margin-bottom: 0;
   padding-left: 0;
+}
 
-  li {
-    display: block;
-    height: ($ratio-text-huge * $line-height * 1rem);
-    margin-bottom: $margin;
-    overflow: hidden;
-    width: calc((100% / 9) - #{$width-gap-small});
+.colors li {
+  display: block;
+  height: ($ratio-text-huge * $line-height * 1rem);
+  margin-bottom: $margin;
+  overflow: hidden;
+  width: calc((100% / 9) - #{$width-gap-small});
+}
 
-    &::before {
-      $c: rgb(0, 0, 0);
+.colors li::before {
+  $c: rgb(0, 0, 0);
 
-      border: 1px solid $c;
-      box-sizing: border-box;
-      content: "";
-      display: block;
-      height: 100%;
-      width: 100%;
-    }
+  border: 1px solid $c;
+  box-sizing: border-box;
+  content: "";
+  display: block;
+  height: 100%;
+  width: 100%;
+}
 
-    &:nth-child(1)::before {
-      background-color: $color-fg;
-    }
+.colors li:nth-child(1)::before {
+  background-color: $color-fg;
+}
 
-    &:nth-child(2)::before {
-      background-color: $color-fg-dark;
-    }
+.colors li:nth-child(2)::before {
+  background-color: $color-fg-dark;
+}
 
-    &:nth-child(3)::before {
-      background-color: $color-fg-light;
-    }
+.colors li:nth-child(3)::before {
+  background-color: $color-fg-light;
+}
 
-    &:nth-child(4)::before {
-      background-color: $color-bg;
-    }
+.colors li:nth-child(4)::before {
+  background-color: $color-bg;
+}
 
-    &:nth-child(5)::before {
-      background-color: $color-bg-dark;
-    }
+.colors li:nth-child(5)::before {
+  background-color: $color-bg-dark;
+}
 
-    &:nth-child(6)::before {
-      background-color: $color-bg-light;
-    }
+.colors li:nth-child(6)::before {
+  background-color: $color-bg-light;
+}
 
-    &:nth-child(7)::before {
-      background-color: $color-accent;
-    }
+.colors li:nth-child(7)::before {
+  background-color: $color-accent;
+}
 
-    &:nth-child(8)::before {
-      background-color: $color-accent-dark;
-    }
+.colors li:nth-child(8)::before {
+  background-color: $color-accent-dark;
+}
 
-    &:nth-child(9)::before {
-      background-color: $color-accent-light;
-    }
-  }
+.colors li:nth-child(9)::before {
+  background-color: $color-accent-light;
 }
 
 // Line Length
