--- a/src/css/natural.scss
+++ b/src/css/natural.scss
@@ -38,14 +38,24 @@ h4,
 h5,
 h6 {
   margin: ($font-size * 2) 0 0;
+}
 
-  &:target {
-    padding-top: $font-size;
-  }
+h1:target,
+h2:target,
+h3:target,
+h4:target,
+h5:target,
+h6:target {
+  padding-top: $font-size;
+}
 
-  + p {
-    margin-top: 0;
-  }
+h1 + p,
+h2 + p,
+h3 + p,
+h4 + p,
+h5 + p,
+h6 + p {
+  margin-top: 0;
 }
 
 // Grouping content
@@ -76,29 +86,31 @@ pre {
 
 blockquote {
   margin: ($font-size * 2) 0 0 ($font-size * 2);
+}
 
-  + figcaption {
-    margin-left: ($font-size * 2);
-  }
+blockquote + figcaption {
+  margin-left: ($font-size * 2);
 }
 
 ol,
 ul {
   margin: ($font-size * 2) 0 0;
   padding-left: ($font-size * 2.5);
+}
 
-  ol,
-  ul {
-    margin-top: 0;
-  }
+ol ol,
+ol ul,
+ul ol,
+ul ul {
+  margin-top: 0;
 }
 
 dl {
   margin: ($font-size * 2) 0 0;
+}
 
-  dl {
-    margin: 0;
-  }
+dl dl {
+  margin: 0;
 }
 
 dd {
@@ -193,21 +205,21 @@ td {
   margin: ($font-size * 2) 0 0;
   max-width: 100%;
   zoom: 1;
+}
 
-  &::after {
-    clear: both;
-    content: "";
-    display: block;
-  }
+.image img::after {
+  clear: both;
+  content: "";
+  display: block;
 }
 
 .seealso {
   font-size: 1.17em;
   font-weight: 700;
+}
 
-  a {
-    font-weight: 400;
-  }
+.seealso a {
+  font-weight: 400;
 }
 
 // Media Queries
@@ -245,12 +257,6 @@ $breakpoint: ($font-size + $indent + $width + $font-size);
   body {
     background-color: inherit;
     font-family: Georgia, serif;
-  }
-
-  p {
-    &[href]::after {
-      content: " (" attr(href) ")";
-    }
   }
 
   .note,
