Hang some heading

--- a/src/css/widget/_hang.scss
+++ b/src/css/widget/_hang.scss
@@ -14,3 +14,15 @@
     width: 100%;
   }
 }
+
+h1.hang {
+  @media (min-width: $breakpoint-full) {
+    margin-top: 0;
+  }
+}
+
+h1.hang + * {
+  @media (min-width: $breakpoint-full) {
+    margin-top: $margin-top-h1;
+  }
+}
