--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -7,7 +7,7 @@
 
     <main class="content">
       <section id="on-2015" class="section">
-        <h1><time>2015</time></h1>
+        <h1 class="hang"><time>2015</time></h1>
 
         <ol class="posts">
           <li><a class="title" href="/documents/democratic-design.html">民主的なデザイン</a></li>
@@ -15,7 +15,7 @@
       </section>
 
       <section id="on-2014" class="section">
-        <h1><time>2014</time></h1>
+        <h1 class="hang"><time>2014</time></h1>
 
         <ol class="posts">
           <li><a class="title" href="/documents/markup.html">“マークアップ”するということ ～ HTML5勧告に寄せて ～</a></li>
@@ -26,7 +26,7 @@
       </section>
 
       <section id="on-2013" class="section">
-        <h1><time>2013</time></h1>
+        <h1 class="hang"><time>2013</time></h1>
 
         <ol class="posts">
           <li><a class="title" href="/documents/css-postprocessor-era.html">CSSポストプロセッサー時代の到来</a></li>
@@ -40,7 +40,7 @@
       </section>
 
       <section id="on-2012" class="section">
-        <h1><time>2012</time></h1>
+        <h1 class="hang"><time>2012</time></h1>
 
         <ol class="posts">
           <li><a class="title" href="/documents/style-repository.html">スタイル・リポジトリ</a></li>
@@ -50,7 +50,7 @@
       </section>
 
       <section id="on-2011" class="section">
-        <h1><time>2011</time></h1>
+        <h1 class="hang"><time>2011</time></h1>
 
         <ol class="posts">
           <li><a class="title" href="/documents/ala-getting-started-with-sass.html">Sassで行こう！</a></li>
@@ -62,7 +62,7 @@
       </section>
 
       <section id="on-2009" class="section">
-        <h1><time>2009</time></h1>
+        <h1 class="hang"><time>2009</time></h1>
 
         <ol class="posts">
           <li><a class="title" href="/documents/adding-meaning-to-your-http-error-pages.html">HTTPエラーページに意味を持たせよう</a></li>
@@ -72,7 +72,7 @@
       </section>
 
       <section id="on-2008" class="section">
-        <h1><time>2008</time></h1>
+        <h1 class="hang"><time>2008</time></h1>
 
         <ol class="posts">
           <li><a class="title" href="/documents/sortable-pokemon-list.html">ソート機能付き ポケモン一覧表</a></li>
@@ -80,7 +80,7 @@
       </section>
 
       <section id="upto-2007" class="section">
-        <h1>～ <time>2007</time></h1>
+        <h1 class="hang">～ <time>2007</time></h1>
 
         <ol class="posts">
           <li><a class="title" href="/documents/216colors.html">216 cross platform colors table</a></li>
