--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -7,7 +7,7 @@
 
     <main class="content">
       <section id="website" class="section">
-        <h1>{{short_title}}</h1>
+        <h1 class="hang">{{short_title}}</h1>
 
         <p>このウェブサイトはドメインの取得こそ2003年くらいですが、そこそこ息の長いウェブサイトで、20世紀からあります。いわゆるウェブログと呼ばれるような記録ともう少しかっちりとした文書を、ウェブサイト制作の話題を中心に書いています。日本最後の<a href="http://blosxom.sourceforge.net/">Blosxom</a>を利用したウェブサイトの座が目標ですが、挫折しそうです。</p>
 
@@ -33,7 +33,7 @@
       </section>
 
       <section id="colophon" class="section">
-        <h1>奥付け</h1>
+        <h1 class="hang">奥付け</h1>
 
         <p>その他、ウェブページの構成やツール、プライバシーについては以下を参照してください。</p>
 
@@ -93,7 +93,7 @@
       </section>
 
       <section id="contact" class="section">
-        <h1>問い合わせ</h1>
+        <h1 class="hang">問い合わせ</h1>
 
         <p>このウェブサイト内のコンテンツについて報告や問い合わせ・クレーム等がある場合は、<a href="mailto:hail2u@gmail.com">メール</a>で連絡してください。</p>
       </section>
