List colors with 3 columns on small screen

--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -108,7 +108,11 @@ body::after {
   height: ($ratio-text-huge * $line-height * 1rem);
   margin-bottom: $margin;
   overflow: hidden;
-  width: calc((100% / 9) - #{$width-gap-small});
+  width: calc((100% / 3) - #{$width-gap-small});
+
+  @media (min-width: $breakpoint-content) {
+    width: calc((100% / 9) - #{$width-gap-small});
+  }
 }
 
 .colors li::before {
