Control outer margin simply

--- a/src/css/_content.scss
+++ b/src/css/_content.scss
@@ -1,16 +1,16 @@
 // Content
 .content {
-  margin: (0 - $margin-top-h1 + $margin-top-global-header) auto $margin-gargantuan;
+  margin: (0 - $margin-top-h1 + $margin-large) auto $margin-gargantuan;
   max-width: $width-content;
   padding-left: $width-gap-small;
   padding-right: $width-gap-small;
 
   @media (min-width: $breakpoint-content) {
-    margin-top: (0 - $margin-top-h1 + $margin-top-global-header-content);
+    margin-top: (0 - $margin-top-h1 + $margin-huge);
   }
 
   @media (min-width: $breakpoint-full) {
-    margin-top: (0 - $margin-top-h1 + $margin-top-global-header-full);
+    margin-top: 0;
     padding-left: ($width-gap-small + $width-supplement + $width-gap);
   }
 }
