--- a/src/css/_global-header.scss
+++ b/src/css/_global-header.scss
@@ -4,17 +4,17 @@
   flex-flow: row wrap;
   margin-left: auto;
   margin-right: auto;
-  margin-top: $margin-top-global-header;
+  margin-top: $margin;
   max-width: $width-content;
   padding-left: $width-gap-small;
   padding-right: $width-gap-small;
 
   @media (min-width: $breakpoint-content) {
-    margin-top: $margin-top-global-header-content;
+    margin-top: $margin-large;
   }
 
   @media (min-width: $breakpoint-full) {
-    margin-top: $margin-top-global-header-full;
+    margin-top: $margin-huge;
     padding-left: ($width-gap-small + $width-supplement + $width-gap);
   }
 }
