--- a/src/css/global-footer/_footlinks.scss
+++ b/src/css/global-footer/_footlinks.scss
@@ -4,6 +4,7 @@
   margin-bottom: $margin-minimal;
 
   @media (min-width: $breakpoint-content) {
+    margin-bottom: 0;
     margin-right: ($width-gap + $width-site-search-query-content);
   }
 }
