--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -88,7 +88,7 @@
         <section>
           <h1 class="subheading">マークアップとスタイルシート</h1>
 
-          <p>マークアップは<a href="https://html.spec.whatwg.org/multipage/">HTML Standard</a>に従って行っています。スタイルシートはSassで書き、CSSへ変換しています。両者のより詳細な解説とプレビューとして<a href="/about/style-guide/">Style Guide</a>を用意してあるので、そちらも参照してください。</p>
+          <p>マークアップは<a href="https://html.spec.whatwg.org/multipage/">HTML Standard</a>に従って行っています。スタイルシートはSassで書き、CSSへ変換しています。両者のより詳細な解説とプレビューとして<a href="/about/style-guide/">スタイル・ガイド</a>を用意してあるので、そちらも参照してください。</p>
         </section>
       </section>
 
