Remove bottom margin from blockquote

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -79,7 +79,7 @@ pre {
 blockquote {
   border-left: $width-border-blockquote solid $color-border-blockquote;
   clear: both;
-  margin: 0 0 $margin;
+  margin: 0;
   padding-left: $padding-left-blockquote;
 
   @media (min-width: $breakpoint-content) {
@@ -87,7 +87,6 @@ blockquote {
   }
 }
 
-figure > blockquote,
 blockquote > :last-child {
   margin-bottom: 0;
 }
