--- a/src/html/404.mustache
+++ b/src/html/404.mustache
@@ -8,9 +8,9 @@
 
     <style>
       :root {
-        background-color: #fcf9f0;
-        color: #3c3330;
-        font-family: --apple-system, Segoe UI, sans-serif;
+        background-color: hsl(36, 48%, 98%);
+        color: hsl(36, 3%, 24%);
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Yu Gothic UI", sans-serif;
         height: 100%;
         line-height: 1;
       }
@@ -26,7 +26,7 @@
       }
 
       a {
-        color: #2175b4;
+        color: hsl(186, 48%, 24%);
       }
 
       .title {
@@ -47,8 +47,8 @@
       }
 
       .query {
-        background-color: #fefcf8;
-        border: 1px solid #e1ddd5;
+        background-color: hsl(36, 84%, 98%);
+        border: 1px solid hsl(36, 12%, 78%);
         box-sizing: border-box;
         color: inherit;
         font-family: inherit;
@@ -59,10 +59,10 @@
       }
 
       .button {
-        background-color: #69a5d3;
+        background-color: hsl(186, 48%, 72%);
         border: 0;
         box-sizing: border-box;
-        color: #fefcf8;
+        color: hsl(36, 84%, 98%);
         font-family: inherit;
         font-size: 100%;
         height: 2rem;
