Use inline SVG for Logo

--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -3,7 +3,8 @@
   flex: auto;
   font-size: ($ratio-text-logo * 1rem);
   font-weight: 900;
-  line-height: inherit;
+  height: ($ratio-text-logo * $line-height-root * 1rem);
+  line-height: 1;
   margin-bottom: 0;
   margin-top: 0;
   text-transform: uppercase;
@@ -19,6 +20,17 @@
   }
 }
 
-.logo a {
-  color: inherit;
+.logo svg {
+  height: ($ratio-text-logo * 1rem);
+  padding: (($ratio-text-logo * $line-height-root - $ratio-text-logo) / 2 * 1rem) 0;
+  width: auto;
+
+  @media (min-width: $breakpoint-content) {
+    height: ($ratio-text-logo-content * 1rem);
+    padding: (($ratio-text-logo-content * $line-height-root - $ratio-text-logo-content) / 2 * 1rem) 0;
+  }
+}
+
+.logo path {
+  fill: $color-fg;
 }
