Control Logo padding in SVG itself

--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -3,7 +3,6 @@
   flex: auto;
   font-size: ($ratio-text-logo * 1rem);
   font-weight: 900;
-  height: ($ratio-text-logo * $line-height-root * 1rem);
   line-height: 1;
   margin-bottom: 0;
   margin-top: 0;
@@ -21,13 +20,11 @@
 }
 
 .logo svg {
-  height: ($ratio-text-logo * 1rem);
-  padding: (($ratio-text-logo * $line-height-root - $ratio-text-logo) / 2 * 1rem) 0;
+  height: ($ratio-text-logo * $line-height-root * 1rem);
   width: auto;
 
   @media (min-width: $breakpoint-content) {
-    height: ($ratio-text-logo-content * 1rem);
-    padding: (($ratio-text-logo-content * $line-height-root - $ratio-text-logo-content) / 2 * 1rem) 0;
+    height: ($ratio-text-logo-content * $line-height-root * 1rem);
   }
 }
 
