--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -3,14 +3,7 @@
 
   <nav class="site-navigation">
     <ul>
-      {{#documents}}<li><mark>特集</mark></li>{{/documents}}
-      {{^documents}}<li><a href="/documents/">特集</a></li>{{/documents}}
-
-      {{#weblog}}
-        {{#weblog_child}}<li><a href="/blog/"><mark>ウェブログ</mark></a></li>{{/weblog_child}}
-        {{^weblog_child}}<li><mark>ウェブログ</mark></li>{{/weblog_child}}
-      {{/weblog}}
-
+      {{#weblog}}<li><mark>{{#weblog_child}}<a href="/blog/">{{/weblog_child}}ウェブログ{{#weblog_child}}</a>{{/weblog_child}}</mark></li>{{/weblog}}
       {{^weblog}}<li><a href="/blog/">ウェブログ</a></li>{{/weblog}}
       {{#about}}<li><mark>いろいろ</mark></li>{{/about}}
       {{^about}}<li><a href="/about/">いろいろ</a></li>{{/about}}
