Revert "Don’t link to documents index"
This reverts commit 8439a02f26eb94142fb7306c74e2dbfe2169e031, and adds
some minor fixes.

--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -3,6 +3,8 @@
 
   <nav class="site-navigation">
     <ul>
+      {{#documents}}<li><mark>特集</mark></li>{{/documents}}
+      {{^documents}}<li><a href="/documents/">特集</a></li>{{/documents}}
       {{#weblog}}<li><mark>{{#weblog_child}}<a href="/blog/">{{/weblog_child}}ウェブログ{{#weblog_child}}</a>{{/weblog_child}}</mark></li>{{/weblog}}
       {{^weblog}}<li><a href="/blog/">ウェブログ</a></li>{{/weblog}}
       {{#about}}<li><mark>いろいろ</mark></li>{{/about}}
