Link figure and figcaption with border

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -135,6 +135,7 @@ figure {
 }
 
 figcaption {
+  border-bottom: $width-border solid $color-bg-dark;
   color: $color-fg-light;
   font-size: ($ratio-text-small * 1rem);
   margin-top: $margin-tiny;
@@ -150,6 +151,7 @@ figcaption {
 }
 
 blockquote + figcaption {
+  border-bottom: 0;
   border-left: $width-border-blockquote solid $color-border-blockquote;
   font-size: inherit;
   margin-top: 0;
