Hang blockquote caption also

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -163,8 +163,11 @@ blockquote + figcaption {
   }
 
   @media (min-width: $breakpoint-full) {
-    position: static;
-    width: auto;
+    border-left: 0;
+    margin-left: 0;
+    margin-right: ($width-gap + $width-border-blockquote + $width-gap);
+    padding-left: 0;
+    width: ($width-supplement - $padding-left-blockquote - $width-border-blockquote);
   }
 }
 
