Use inline SVG for Share

--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -61,3 +61,5 @@ $width-site-search-query-content: ($width-content / $ratio / $ratio);
 // Widget
 $margin-top-move: (($line-height-root - 1) / 2 * 1rem);
 $margin-left-move: $width-gap-small;
+
+$height-share-icon: ($ratio-text-large * 1rem);
