--- a/src/css/natural.scss
+++ b/src/css/natural.scss
@@ -49,6 +49,11 @@ h6:target {
   padding-top: $font-size;
 }
 
+// Grouping content
+p {
+  margin: ($font-size * 2) 0 0;
+}
+
 h1 + p,
 h2 + p,
 h3 + p,
@@ -56,11 +61,6 @@ h4 + p,
 h5 + p,
 h6 + p {
   margin-top: 0;
-}
-
-// Grouping content
-p {
-  margin: ($font-size * 2) 0 0;
 }
 
 hr {
@@ -75,7 +75,7 @@ hr {
 
 pre {
   background-color: darken($light, 3%);
-  font-family: "Menlo", "Consolas", monospace;
+  font-family: Menlo, Consolas, monospace;
   font-size: ($font-size * 0.875);
   line-height: 1.25;
   margin: ($font-size * 2) 0 0;
@@ -148,7 +148,7 @@ abbr {
 code,
 var,
 samp {
-  font-family: "Menlo", "Consolas", monospace;
+  font-family: Menlo, Consolas, monospace;
 }
 
 // Edits
