--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -164,6 +164,6 @@ body::after {
 
 // Line Length
 .line-length {
-  font-family: "Verdana", sans-serif;
+  font-family: Verdana, sans-serif;
   word-break: break-all;
 }
