Don’t outdent things

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -80,10 +80,6 @@ blockquote {
   clear: both;
   margin: 0;
   padding-left: $padding-left-blockquote;
-
-  @media (min-width: $breakpoint-content) {
-    margin-left: $margin-left-blockquote-content;
-  }
 }
 
 figure blockquote > :last-child {
@@ -93,11 +89,7 @@ figure blockquote > :last-child {
 ul,
 ol {
   margin: 0 0 $margin;
-  padding-left: $padding-left-list;
-
-  @media (min-width: $breakpoint-content) {
-    padding-left: 0;
-  }
+  padding-left: $indent;
 }
 
 ul ul,
@@ -105,10 +97,6 @@ ul ol,
 ol ul,
 ol ol {
   margin-bottom: 0;
-
-  @media (min-width: $breakpoint-content) {
-    padding-left: $padding-left-list;
-  }
 }
 
 dl {
@@ -158,16 +146,10 @@ blockquote + figcaption {
   padding-left: $padding-left-blockquote;
   padding-top: $margin;
 
-  @media (min-width: $breakpoint-content) {
-    margin-left: $margin-left-blockquote-content;
-  }
-
   @media (min-width: $breakpoint-full) {
     border-left: 0;
     margin-left: 0;
-    margin-right: ($width-gap + $width-border-blockquote + $width-gap);
     padding-left: 0;
-    width: ($width-supplement - $padding-left-blockquote - $width-border-blockquote);
   }
 }
 
