--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -45,11 +45,8 @@ $breakpoint-fhd-up-height: 1081px;
 // Core
 $margin-top-h1: $margin-gargantuan;
 
-$padding-left-blockquote: $width-gap;
 $width-border-blockquote: $width-border-large;
-$margin-left-blockquote-content: (- ($padding-left-blockquote + $width-border-blockquote));
-
-$padding-left-list: $indent;
+$padding-left-blockquote: ($indent - $width-border-blockquote);
 
 $width-border-table: $width-border-small;
 
