Align blockquote and its caption

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -147,9 +147,9 @@ blockquote + figcaption {
   padding-top: $margin;
 
   @media (min-width: $breakpoint-full) {
-    border-left: 0;
-    margin-left: 0;
-    padding-left: 0;
+    margin-right: 0;
+    position: static;
+    width: auto;
   }
 }
 
