Shorten figcaption border

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -125,11 +125,13 @@ figure {
 figcaption {
   border-bottom: $width-border solid $color-bg-dark;
   color: $color-fg-light;
+  display: inline-block;
   font-size: ($ratio-text-small * 1rem);
   margin-top: $margin-tiny;
 
   @media (min-width: $breakpoint-full) {
     bottom: 0;
+    display: block;
     margin-right: $width-gap;
     position: absolute;
     right: 100%;
