Update license line

--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -1,7 +1,7 @@
 /**
  * debug.css
  *
- * Licensed under MIT: http://hail2u.mit-license.org/2011
+ * LICENSE: http://hail2u.mit-license.org/2011
  */
 
 // Variable
