Reduce color variations

--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -27,7 +27,7 @@
 }
 
 .site-navigation mark::after {
-  border: $width-border-small solid $color-accent-light;
+  border: $width-border-small solid $color-accent;
   content: "";
   display: block;
   position: absolute;
