--- a/src/css/var/_color.scss
+++ b/src/css/var/_color.scss
@@ -14,27 +14,19 @@
 }
 
 // Foreground
-$color-fg: hsl(30, 5%, 20%);
-
-$color-fg-dark: hsl(30, 5%, 10%);
-$color-fg-light: hsl(30, 5%, 30%);
+$color-fg: hsl(45, 5%, 10%);
 
 // Background
-$color-bg: hsl(30, 30%, 95%);
-
-$color-bg-dark: hsl(30, 5%, 70%);
-$color-bg-light: hsl(30, 30%, 100%);
+$color-bg: hsl(45, 60%, 95%);
 
 // Accent
-$color-accent: hsl(210, 90%, 30%);
+$color-accent: hsl(195, 70%, 25%);
 
-$color-accent-dark: hsl(210, 10%, 30%);
-$color-accent-light: hsl(210, 90%, 45%);
+// Variations
+$color-fg-light: hsl(45, 5%, 30%);
+$color-bg-dark: hsl(45, 10%, 70%);
 
 // Core
 $color-border-blockquote: $color-bg-dark;
 
 $color-border-table: $color-bg-dark;
-
-// Widget
-$color-fg-share-button: $color-fg;
