Fixing via svg:not(:root)

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -273,11 +273,8 @@ form {
 }
 
 // SVG
-svg:not(:root),
-hatch,
-image,
-marker,
-pattern,
-symbol {
+svg:not(:root) {
+  max-height: 100%;
+  max-width: 100%;
   overflow: hidden;
 }
