Use class for querying

--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -12,7 +12,7 @@
         <ol class="posts">
           {{#articles}}
             <li>
-              <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
+              <div class="info"><time class="js-reldate" datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
               <a class="title" href="{{link}}">{{{title}}}</a>
             </li>
           {{/articles}}
