--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -15,7 +15,7 @@
         {{/isFirstInYear}}
 
         <li>
-          <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
+          <div class="info"><time datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
           <a class="title" href="{{link}}">{{{title}}}</a>
         </li>
 
